# TurtleGraphics-1

./: .gitignore  CMakeLists.txt  Meeting-notes-8.11.2024.md  Meeting-notes.md  README.md  resources.qrc
meetings/: meeting_notes-week_43-23.10.2024.md  meeting_notes-week_44-31.10.2024.md  meeting_notes-week_45-8.11.2024.md  meeting_notes-week_46-14.11.2024.md  meeting_notes-week_47-21.11.2024.md  meeting_notes-week_49-5.12.2024.2024-2.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  readme.md  storage.cpp  storage.h  turtle.cpp  turtle.h
tests/: unittest.cpp  unittest.h
ui/: mainwindow.ui
